--- a/react-complete/src/App.css
+++ b/react-complete/src/App.css
@@ -1,19 +1,14 @@
 .App {
     text-align: center;
-}
-
-.App-logo {
+  }
+  
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
     height: 40vmin;
     pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
+  }
+  
+  .App-header {
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
@@ -22,50 +17,16 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-}
-
-.App-link {
+  }
+  
+  .App-link {
     color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-.content {
-  display: flex;
-  flex-flow: column;
-}
-
-.buttons-div {
+  }
+  
+  .form-field{
     display: flex;
-    justify-content: space-around;
-    width: 25%;
-}
-
-button {
-    color: #fff;
-    width: 100px;
-    height: 40px;
-    font-weight: bold;
-    border-radius: 10px;
-    transition: all 0.5s ease-in-out;
-    cursor: pointer;
-}
-
-button:hover {
-    transform: scale(1.2);
-}
-
-.remove-button {
-  background-color: red;
-}
-
-.add-button {
-    background-color: green;
-}
+    flex-direction: row;
+    margin-bottom: 5px;
+    justify-content: space-between;
+    width:300px;
+  }
